Finished notebook demo

--- a/03_notebook/index_02.html
+++ b/03_notebook/index_02.html
@@ -12,7 +12,7 @@
 </head>
 
 
-<body>
+<body class="mdc-typography">
     <button class="mdc-button mdc-button--unelevated" id="1_button" onclick="addCell('child')">
         Add cell
     </button>
